--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.6-Alpha2
        - Fixed newsearch issue preventing use of more than 9 rules 
                (reported by Twister)
        - Fixed JSON escaping issue that broke search in some cases
                (reported by XeeNiX)
        - Overhauled CLI tools for installation and database management
        - Fixed admin form issue (reported by the3rdbit)
        - Improved efficiency of fetching song lists via the API
                (reported by lotan_rm)
        - Added admin_enable_required option to user registration
        - Fixed session issue preventing some users from streaming
                (reported by miir01)
        - Quote Content-Disposition header for art, fixes Chrome issue
                (patch by Sébastien LIENARD)
        - Fixed art URL returned via the API (patch by lotan_rm)
        - Fixed video searches (reported by mchugh19)
	- Fixed Database Upgrade issue that caused catalog user/pass for
		remote catalogs to not be added correctly
        - Added the ability to locally cache passwords validated by external
                means (e.g. to allow LDAP authenticated users to use the API)
        - Fixed session handling to actually use our custom handler
                (reported by ss23)
        - Fixed Last.FM art method (reported by claudio)
        - Updated Captcha PHP to 2.3
        - Updated getID3 to 1.9.1
        - Updated PHPMailer to 5.2.0
        - Fixed bug in MPD module which affected toggling random or repeat 
                (patch from jherold)
        - Properly escape config values when writing ampache.cfg.php
        - Fixed session persistence with auth disabled (reported by Nathanael
                Anderson)